[package]
name = "noprivexec"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "noprivexec"
path = "src/lib.rs"

[[bin]]
name = "noprivexec"
path = "src/main.rs"

[dependencies]
libc = "0.2.120"

[dev-dependencies]
assert_cmd = "1"
libc = "0.2.120"
