[package]
name = "noprivexec"
version = "0.5.2"
edition = "2021"
license = "ISC"
description = "Disable capability to use setuid privileges"
readme = "README.md"
homepage = "https://codeberg.org/msantos/noprivexec-rs"
repository = "https://codeberg.org/msantos/noprivexec-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "noprivexec"
path = "src/lib.rs"

[[bin]]
name = "noprivexec"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "1"
libc = "0.2.120"
